# roomcounter

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .env  pyproject.toml  roomcounter.sqlite
app/roomcounter/: main.py
app/roomcounter/api/: api.py  dependencies.py
app/roomcounter/api/endpoints/: activities.py  doors.py  login.py  rooms.py  websockets.py
app/roomcounter/core/: config.py  cookie_token.py  security.py  templating.py  websockets.py
app/roomcounter/crud/: crud_activity.py  crud_door.py  crud_room.py  crud_user.py
app/roomcounter/db/: base_class.py  init_db.py  session.py
app/roomcounter/models/: room.py  user.py
app/roomcounter/schemas/: activity.py  door.py  permission.py  room.py  token.py  user.py
app/roomcounter/static/roomcounter/js/: doors_dropdown.js  login.js  roomcounter.js
app/roomcounter/templates/: base.html  index.html
